--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,19 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.8",
+        "doctrine/doctrine-migrations-bundle": "^2.1",
+        "doctrine/doctrine-orm-module": "^3.0",
+        "longman/telegram-bot": "^0.62.0",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/http-client": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
