--- a/.env
+++ b/.env
@@ -27,3 +27,13 @@ APP_SECRET=29024c82f3e5414f7784011e11719c6d
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+#DATABASE_HOST=
+#DATABASE_NAME=
+#DATABASE_USER=
+#DATABASE_PASSWORD=
+
+#TASK_SERVICE_URI=
+
+#BOT_API_KEY=
+#BOT_USERNAME=
